<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="199dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="178dp"
            android:layout_height="match_parent"
            android:orientation="vertical">
           <RadioGroup
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:text="@string/Car"
                android:textSize="18sp"
                android:onClick="selectVehicle"/>

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="@string/Bike"
                android:textSize="18sp"
                android:onClick="selectVehicle"/>

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:text="@string/Plane"
                android:textSize="18sp"
                android:onClick="selectVehicle"/>

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Boat"
                android:textSize="18sp"
                android:onClick="selectVehicle"/>
           </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="232dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pricefield"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/UPrice"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/vehiclequant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Quantity"
                android:inputType="number" />

            <TextView
                android:id="@+id/taxesview"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="Taxes"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/totalview"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:hint="Total"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="102dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/calbutton"
            android:layout_width="387dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right"
            android:layout_weight="1"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/CALCULATE"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="203dp"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="104dp"
                android:layout_height="77dp"
                app:srcCompat="@drawable/messageic" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/madpic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="208dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/intentbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/SAMPLE_MESSAGE"/>

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/SMS" />

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/EMAIL" />

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/CALL" />

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/CALCULATOR" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>